"feat: рефакторинг сервиса юзер"

--- a/src/users/AutoMarket.Users.API/appsettings.json
+++ b/src/users/AutoMarket.Users.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Postgres": "Server=localhost;Port=5432;Database=usersdb;User Id=postgres;Password=developer123;"
+    "Postgres": ""
   },
   "AllowedHosts": "*"
 }
